examples/client/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  selector:
    app: client
  type: ClusterIP
  ports:
  - name: client
    port: 80
    targetPort: http
    protocol: TCP
