examples/client/kustomize/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: client
spec:
  hosts:
  - "*"
  gateways:
  - client
  http:
  - route:
    - destination:
        host: client
        port:
          number: 80
